--- a/tekton/src/params/install.yml.j2
+++ b/tekton/src/params/install.yml.j2
@@ -209,6 +209,10 @@
   type: string
   description: Set to 'install' to set up a Db2 instance for Real Estate and Facilities
   default: "none"
+- name: db2_action_aiservice
+  type: string
+  description: Set to 'install' to set up a Db2 instance for AI Service
+  default: "none"
 
 # Dependencies - CP4D
 # -----------------------------------------------------------------------------
@@ -731,3 +735,7 @@
   description: ConfigMap with configurations not supported by Tekton
   type: string
   default: ""
+
+#  AI Service Configuration
+# -----------------------------------------------------------------------------
+{{ lookup('template', params_src_dir ~ '/install-aiservice.yml.j2') }}
