--- a/tekton/src/pipelines/taskdefs/dependencies/dro.yml.j2
+++ b/tekton/src/pipelines/taskdefs/dependencies/dro.yml.j2
@@ -6,11 +6,10 @@
       value: "$(params.dro_action)"
 
     - name: mas_instance_id
-{% if application is defined and application == "aiservice" %}
-      value: $(params.aiservice_instance_id)
-{% else %}
       value: $(params.mas_instance_id)
-{% endif %}
+
+    - name: aiservice_instance_id
+      value: $(params.aiservice_instance_id)
 
     - name: custom_labels
       value: $(params.custom_labels)
@@ -29,6 +28,7 @@
       value: $(params.dro_namespace)
     - name: dro_storage_class
       value: $(params.storage_class_rwo)
+
   taskRef:
     kind: Task
     name: mas-devops-dro
