--- a/tekton/src/pipelines/taskdefs/dependencies/mongo.yml.j2
+++ b/tekton/src/pipelines/taskdefs/dependencies/mongo.yml.j2
@@ -6,11 +6,10 @@
       value: dependencies-mongodb
 
     - name: mas_instance_id
-{% if application is defined and application == "aiservice" %}
-      value: $(params.aiservice_instance_id)
-{% else %}
       value: $(params.mas_instance_id)
-{% endif %}
+
+    - name: aiservice_instance_id
+      value: $(params.aiservice_instance_id)
 
     - name: mongodb_namespace
       value: $(params.mongodb_namespace)
@@ -46,6 +45,7 @@
     - input: "$(params.mongodb_action)"
       operator: in
       values: ["install"]
+
   taskRef:
     kind: Task
     name: mas-devops-mongodb
