--- a/tekton/src/pipelines/taskdefs/dependencies/sls.yml.j2
+++ b/tekton/src/pipelines/taskdefs/dependencies/sls.yml.j2
@@ -6,11 +6,10 @@
       value: dependencies-sls
 
     - name: mas_instance_id
-{% if application is defined and application == "aiservice" %}
-      value: $(params.aiservice_instance_id)
-{% else %}
       value: $(params.mas_instance_id)
-{% endif %}
+
+    - name: aiservice_instance_id
+      value: $(params.aiservice_instance_id)
 
     - name: artifactory_username
       value: $(params.artifactory_username)
