--- a/tekton/src/tasks/gitops/gitops-iac-generate-common-files.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-iac-generate-common-files.yml.j2
@@ -172,41 +172,34 @@ spec:
           git config --global user.email "you@example.com"
           git config --global user.password $GITHUB_PAT
 
-          mas gitops-iac-generate-common-files \
-            -a "$ACCOUNT" \
-            -c "$CLUSTER_NAME" \
-            -m "$MAS_INSTANCE_ID" \
-            --dir /workspace/gitops-iac \
-            --github-push \
-            --github-host "$GITHUB_HOST" \
-            --github-org "$GITHUB_ORG" \
-            --github-repo "$GITHUB_REPO" \
-            --git-branch "$GIT_BRANCH" \
-            --region-name "$REGION_NAME" \
-            --cluster-url "$CLUSTER_URL" \
-            --is_efs "$IS_EFS" \
-            --is_s3 "$IS_S3" \
-            --efs_manage_db2_performance_mode "$EFS_MANAGE_DB2_PERFORMANCE_MODE" \
-            --efs_manage_db2_mount_count "$EFS_MANAGE_DB2_MOUNT_COUNT" \
-            --efs_manage_db2_throughput_mode "$EFS_MANAGE_DB2_THROUGHPUT_MODE" \
-            --efs_manage_main_performance_mode "$EFS_MANAGE_MAIN_PERFORMANCE_MODE" \
-            --efs_manage_main_mount_count "$EFS_MANAGE_MAIN_MOUNT_COUNT" \
-            --efs_manage_main_throughput_mode "$EFS_MANAGE_MAIN_THROUGHPUT_MODE" \
-            --efs_iot_db2_performance_mode "$EFS_IOT_DB2_PERFORMANCE_MODE" \
-            --efs_iot_db2_mount_count "$EFS_IOT_DB2_MOUNT_COUNT" \
-            --efs_iot_db2_throughput_mode "$EFS_IOT_DB2_THROUGHPUT_MODE" \
-            --efs_facilities_db2_performance_mode "$EFS_FACILITIES_DB2_PERFORMANCE_MODE" \
-            --efs_facilities_db2_mount_count "$EFS_FACILITIES_DB2_MOUNT_COUNT" \
-            --efs_facilities_db2_throughput_mode "$EFS_FACILITIES_DB2_THROUGHPUT_MODE" \
-            --efs_facilities_main_performance_mode "$EFS_FACILITIES_MAIN_PERFORMANCE_MODE" \
-            --efs_facilities_main_mount_count "$EFS_FACILITIES_MAIN_MOUNT_COUNT" \
-            --efs_facilities_main_throughput_mode "$EFS_FACILITIES_MAIN_THROUGHPUT_MODE" \
-            --efs_visualinspection_main_performance_mode "$EFS_VISUALINSPECTION_MAIN_PERFORMANCE_MODE" \
-            --efs_visualinspection_main_mount_count "$EFS_VISUALINSPECTION_MAIN_MOUNT_COUNT" \
-            --efs_visualinspection_main_throughput_mode "$EFS_VISUALINSPECTION_MAIN_THROUGHPUT_MODE" \
-            --s3_manage "$S3_MANAGE" \
-            --s3_mvi "$S3_MVI"
+          CMD="mas gitops-iac-generate-common-files -a $ACCOUNT -c $CLUSTER_NAME -m $MAS_INSTANCE_ID --dir /workspace/gitops-iac --github-push --github-host $GITHUB_HOST --github-org $GITHUB_ORG --github-repo $GITHUB_REPO --git-branch $GIT_BRANCH --region-name $REGION_NAME"
 
+          [ -n "$CLUSTER_URL" ] && CMD="$CMD --cluster-url $CLUSTER_URL"
+          [ -n "$IS_EFS" ] && CMD="$CMD --is_efs $IS_EFS"
+          [ -n "$IS_S3" ] && CMD="$CMD --is_s3 $IS_S3"
+          [ -n "$EFS_MANAGE_DB2_PERFORMANCE_MODE" ] && CMD="$CMD --efs_manage_db2_performance_mode $EFS_MANAGE_DB2_PERFORMANCE_MODE"
+          [ -n "$EFS_MANAGE_DB2_MOUNT_COUNT" ] && CMD="$CMD --efs_manage_db2_mount_count $EFS_MANAGE_DB2_MOUNT_COUNT"
+          [ -n "$EFS_MANAGE_DB2_THROUGHPUT_MODE" ] && CMD="$CMD --efs_manage_db2_throughput_mode $EFS_MANAGE_DB2_THROUGHPUT_MODE"
+          [ -n "$EFS_MANAGE_MAIN_PERFORMANCE_MODE" ] && CMD="$CMD --efs_manage_main_performance_mode $EFS_MANAGE_MAIN_PERFORMANCE_MODE"
+          [ -n "$EFS_MANAGE_MAIN_MOUNT_COUNT" ] && CMD="$CMD --efs_manage_main_mount_count $EFS_MANAGE_MAIN_MOUNT_COUNT"
+          [ -n "$EFS_MANAGE_MAIN_THROUGHPUT_MODE" ] && CMD="$CMD --efs_manage_main_throughput_mode $EFS_MANAGE_MAIN_THROUGHPUT_MODE"
+          [ -n "$EFS_IOT_DB2_PERFORMANCE_MODE" ] && CMD="$CMD --efs_iot_db2_performance_mode $EFS_IOT_DB2_PERFORMANCE_MODE"
+          [ -n "$EFS_IOT_DB2_MOUNT_COUNT" ] && CMD="$CMD --efs_iot_db2_mount_count $EFS_IOT_DB2_MOUNT_COUNT"
+          [ -n "$EFS_IOT_DB2_THROUGHPUT_MODE" ] && CMD="$CMD --efs_iot_db2_throughput_mode $EFS_IOT_DB2_THROUGHPUT_MODE"
+          [ -n "$EFS_FACILITIES_DB2_PERFORMANCE_MODE" ] && CMD="$CMD --efs_facilities_db2_performance_mode $EFS_FACILITIES_DB2_PERFORMANCE_MODE"
+          [ -n "$EFS_FACILITIES_DB2_MOUNT_COUNT" ] && CMD="$CMD --efs_facilities_db2_mount_count $EFS_FACILITIES_DB2_MOUNT_COUNT"
+          [ -n "$EFS_FACILITIES_DB2_THROUGHPUT_MODE" ] && CMD="$CMD --efs_facilities_db2_throughput_mode $EFS_FACILITIES_DB2_THROUGHPUT_MODE"
+          [ -n "$EFS_FACILITIES_MAIN_PERFORMANCE_MODE" ] && CMD="$CMD --efs_facilities_main_performance_mode $EFS_FACILITIES_MAIN_PERFORMANCE_MODE"
+          [ -n "$EFS_FACILITIES_MAIN_MOUNT_COUNT" ] && CMD="$CMD --efs_facilities_main_mount_count $EFS_FACILITIES_MAIN_MOUNT_COUNT"
+          [ -n "$EFS_FACILITIES_MAIN_THROUGHPUT_MODE" ] && CMD="$CMD --efs_facilities_main_throughput_mode $EFS_FACILITIES_MAIN_THROUGHPUT_MODE"
+          [ -n "$EFS_VISUALINSPECTION_MAIN_PERFORMANCE_MODE" ] && CMD="$CMD --efs_visualinspection_main_performance_mode $EFS_VISUALINSPECTION_MAIN_PERFORMANCE_MODE"
+          [ -n "$EFS_VISUALINSPECTION_MAIN_MOUNT_COUNT" ] && CMD="$CMD --efs_visualinspection_main_mount_count $EFS_VISUALINSPECTION_MAIN_MOUNT_COUNT"
+          [ -n "$EFS_VISUALINSPECTION_MAIN_THROUGHPUT_MODE" ] && CMD="$CMD --efs_visualinspection_main_throughput_mode $EFS_VISUALINSPECTION_MAIN_THROUGHPUT_MODE"
+          [ -n "$S3_MANAGE" ] && CMD="$CMD --s3_manage $S3_MANAGE"
+          [ -n "$S3_MVI" ] && CMD="$CMD --s3_mvi $S3_MVI"
+
+          echo "Executing: $CMD"
+          eval $CMD
           exit $?
       command:
         - /bin/sh
