--- a/tekton/src/tasks/gitops/gitops-iac-generate-common-files.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-iac-generate-common-files.yml.j2
@@ -175,8 +175,9 @@ spec:
           CMD="mas gitops-iac-generate-common-files -a $ACCOUNT -c $CLUSTER_NAME -m $MAS_INSTANCE_ID --dir /workspace/gitops-iac --github-push --github-host $GITHUB_HOST --github-org $GITHUB_ORG --github-repo $GITHUB_REPO --git-branch $GIT_BRANCH --region-name $REGION_NAME"
 
           [ -n "$CLUSTER_URL" ] && CMD="$CMD --cluster-url $CLUSTER_URL"
-          [ -n "$IS_EFS" ] && CMD="$CMD --is_efs $IS_EFS"
-          [ -n "$IS_S3" ] && CMD="$CMD --is_s3 $IS_S3"
+          # IS_EFS and IS_S3 are required, default to false if not set
+          CMD="$CMD --is_efs ${IS_EFS:-false}"
+          CMD="$CMD --is_s3 ${IS_S3:-false}"
           [ -n "$EFS_MANAGE_DB2_PERFORMANCE_MODE" ] && CMD="$CMD --efs_manage_db2_performance_mode $EFS_MANAGE_DB2_PERFORMANCE_MODE"
           [ -n "$EFS_MANAGE_DB2_MOUNT_COUNT" ] && CMD="$CMD --efs_manage_db2_mount_count $EFS_MANAGE_DB2_MOUNT_COUNT"
           [ -n "$EFS_MANAGE_DB2_THROUGHPUT_MODE" ] && CMD="$CMD --efs_manage_db2_throughput_mode $EFS_MANAGE_DB2_THROUGHPUT_MODE"
