--- a/tekton/src/tasks/gitops/gitops-iac-manage-pr.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-iac-manage-pr.yml.j2
@@ -61,19 +61,14 @@ spec:
           git config --global user.email "you@example.com"
           git config --global user.password $GITHUB_PAT
 
-          mas gitops-iac-manage-pr \
-            -a $ACCOUNT \
-            -c $CLUSTER_NAME \
-            -m $MAS_INSTANCE_ID \
-            --dir /workspace/gitops-iac \
-            --github-push \
-            --github-host $GITHUB_HOST \
-            --github-org $GITHUB_ORG \
-            --github-repo $GITHUB_REPO \
-            --git-branch $GIT_BRANCH \
-            --is_efs $IS_EFS \
-            --is_s3 $IS_S3
+          CMD="mas gitops-iac-manage-pr -a $ACCOUNT -c $CLUSTER_NAME -m $MAS_INSTANCE_ID --dir /workspace/gitops-iac --github-push --github-host $GITHUB_HOST --github-org $GITHUB_ORG --github-repo $GITHUB_REPO --git-branch $GIT_BRANCH"
 
+          # IS_EFS and IS_S3 are required, default to false if not set
+          CMD="$CMD --is_efs ${IS_EFS:-false}"
+          CMD="$CMD --is_s3 ${IS_S3:-false}"
+
+          echo "Executing: $CMD"
+          eval $CMD
           exit $?
       command:
         - /bin/sh
