--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-main.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-main.yaml.j2
@@ -46,12 +46,12 @@ locals {
       access_level  = var.access_level_rw
     },
     logs_rw = {
-      bucket_name   = "${var.s3bucket_name_prefix_manage}-log"
+      bucket_name   = "${var.s3bucket_name_prefix_manage}-logs"
       iam_user_name = "${var.iam_user_name_prefix_manage}-log-${var.access_level_rw}"
       access_level  = var.access_level_rw
     },
     logs_ro = {
-      bucket_name   = "${var.s3bucket_name_prefix_manage}-log"
+      bucket_name   = "${var.s3bucket_name_prefix_manage}-logs"
       iam_user_name = "${var.iam_user_name_prefix_manage}-log-${var.access_level_ro}"
       access_level  = var.access_level_ro
     }
@@ -125,10 +125,10 @@ locals {
         logs = {
           name_prefix          = var.name_prefix
           create               = var.create_bucket
-          name                 = "${var.s3bucket_name_prefix_manage}-log"
-          id                   = "${var.s3bucket_name_prefix_manage}-log"
+          name                 = "${var.s3bucket_name_prefix_manage}-logs"
+          id                   = "${var.s3bucket_name_prefix_manage}-logs"
           access_level         = "ro"
-          s3_bucket_arn        = "arn:aws:s3:::${var.s3bucket_name_prefix_manage}-log"
+          s3_bucket_arn        = "arn:aws:s3:::${var.s3bucket_name_prefix_manage}-logs"
           secret_suffix        = "manage_logging/cos-logging"
           cos_secret_format    = false
           manage_secret_format = true
