[patch] changes to run facilities after manage

--- a/tekton/src/pipelines/mas-fvt-launcher.yml.j2
+++ b/tekton/src/pipelines/mas-fvt-launcher.yml.j2
@@ -940,6 +940,7 @@ spec:
           values: ["true", "True"]
       runAfter:
         - approval-suite-verify
+        - waitfor-manage
 
     - name: launchfvt-facilities
       timeout: "0"
