[patch] Enable Manage AI Service Bindings

--- a/tekton/src/params/install-aiservice.yml.j2
+++ b/tekton/src/params/install-aiservice.yml.j2
@@ -4,6 +4,14 @@
   type: string
   description: AI Service instance id
   default: ""
+- name: manage_bind_aiservice_instance_id
+  type: string
+  description: AI Service Instance ID to bind with Manage
+  default: ""
+- name: manage_bind_aiservice_tenant_id
+  type: string
+  description: AI Service Tenant ID to bind with Manage
+  default: ""
 - name: aiservice_channel
   type: string
   description: Default channel for IBM Maximo AI Service
