--- a/tekton/src/pipelines/taskdefs/apps/manage-app.yml.j2
+++ b/tekton/src/pipelines/taskdefs/apps/manage-app.yml.j2
@@ -11,6 +11,10 @@
       value: manage
     - name: aiservice_instance_id
       value: $(params.aiservice_instance_id)
+    - name: manage_bind_aiservice_instance_id
+      value: $(params.manage_bind_aiservice_instance_id)
+    - name: manage_bind_aiservice_tenant_id
+      value: $(params.manage_bind_aiservice_tenant_id)
     - name: artifactory_username
       value: $(params.artifactory_username)
     - name: artifactory_token
