[patch] add support to cost and reason code for additional-infrastructure

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-mas-instance-base.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-mas-instance-base.yaml.j2
@@ -36,11 +36,11 @@ additional_vpn: {{ ADDITIONAL_VPN }}
 {% endif %}
 
 {% if ADDITIONAL_INFRASTRUCTURE is defined and ADDITIONAL_INFRASTRUCTURE != '' %}
-additional_infrastructure: "{{ ADDITIONAL_INFRASTRUCTURE }}"
-instance_name: "{{ INSTANCE_NAME }}"
-instance_reason_Code: "{{ INSTANCE_REASON_CODE }}"
-instance_cost: {{ INSTANCE_COST }}
-
+additional_infrastructure: {{ ADDITIONAL_INFRASTRUCTURE }}
+{% if ADDITIONAL_INFRASTRUCTURE_INSTANCES is defined and ADDITIONAL_INFRASTRUCTURE_INSTANCES != '' %}
+additional_infrastructure_instances:
+{{ ADDITIONAL_INFRASTRUCTURE_INSTANCES | indent(2) }}
+{% endif %}
 {% endif %}
 
 {% if EXTENSIONS is defined and EXTENSIONS != '' %}
