--- a/tekton/src/tasks/suite-app-install.yml.j2
+++ b/tekton/src/tasks/suite-app-install.yml.j2
@@ -194,25 +194,25 @@ spec:
       type: string
       description: Password to authenticate into Manage custom archive url (if required)
       default: ""
-    - name: mas_app_settings_crypto_key
+    - name: mas_manage_encryptionsecret_crypto_key
       type: string
       description: Manage database encryption key for MXE_SECURITY_CRYPTO_KEY
       default: ""
-    - name: mas_app_settings_cryptox_key
+    - name: mas_manage_encryptionsecret_cryptox_key
       type: string
       description: Manage database encryption key for MXE_SECURITY_CRYPTOX_KEY
       default: ""
-    - name: mas_app_settings_old_crypto_key
+    - name: mas_manage_encryptionsecret_old_crypto_key
       type: string
       description: Manage database encryption key for MXE_SECURITY_OLD_CRYPTO_KEY
       default: ""
-    - name: mas_app_settings_old_cryptox_key
+    - name: mas_manage_encryptionsecret_old_cryptox_key
       type: string
       description: Manage database encryption key for MXE_SECURITY_OLD_CRYPTOX_KEY
       default: ""
-    - name: mas_app_settings_override_encryption_secrets_flag
+    - name: mas_manage_ws_db_encryptionsecret
       type: string
-      description: Defines if Manage database encryption secret should be overriden with new values provided
+      description: Name of the Manage database encryption secret
       default: ""
     - name: mas_app_settings_default_jms
       type: string
@@ -465,16 +465,16 @@ spec:
           value: $(params.mas_app_settings_customization_archive_username)
         - name: MAS_APP_SETTINGS_CUSTOMIZATION_ARCHIVE_PASSWORD
           value: $(params.mas_app_settings_customization_archive_password)
-        - name: MAS_APP_SETTINGS_CRYPTO_KEY
-          value: $(params.mas_app_settings_crypto_key)
-        - name: MAS_APP_SETTINGS_CRYPTOX_KEY
-          value: $(params.mas_app_settings_cryptox_key)
-        - name: MAS_APP_SETTINGS_OLD_CRYPTO_KEY
-          value: $(params.mas_app_settings_old_crypto_key)
-        - name: MAS_APP_SETTINGS_OLD_CRYPTOX_KEY
-          value: $(params.mas_app_settings_old_cryptox_key)
-        - name: MAS_APP_SETTINGS_OVERRIDE_ENCRYPTION_SECRETS_FLAG
-          value: $(params.mas_app_settings_override_encryption_secrets_flag)
+        - name: MAS_MANAGE_ENCRYTIONSECRET_CRYPTO_KEY
+          value: $(params.mas_manage_encryptionsecret_crypto_key)
+        - name: MAS_MANAGE_ENCRYTIONSECRET_CRYPTOX_KEY
+          value: $(params.mas_manage_encryptionsecret_cryptox_key)
+        - name: MAS_MANAGE_ENCRYTIONSECRET_OLD_CRYPTO_KEY
+          value: $(params.mas_manage_encryptionsecret_old_crypto_key)
+        - name: MAS_MANAGE_ENCRYTIONSECRET_OLD_CRYPTOX_KEY
+          value: $(params.mas_manage_encryptionsecret_old_cryptox_key)
+        - name: MAS_MANAGE_WS_DB_ENCRYTIONSECRET
+          value: $(params.mas_manage_ws_db_encryptionsecret)
         - name: MAS_APP_SETTINGS_DEFAULT_JMS
           value: $(params.mas_app_settings_default_jms)
         - name: MAS_POD_TEMPLATES_DIR
