--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-variables.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-variables.yaml.j2
@@ -1,4 +1,4 @@
-{%- if (IS_S3 | lower == 'true') or (IS_EFS | lower == 'true')%}
+{%- if (IS_S3 | lower == 'true') or (IS_EFS | lower == 'true') or (IS_MSK | lower == 'true') %}
 variable "instance_name" {
     type        = string
     description = "Name of Instance"
