--- a/tekton/src/pipelines/gitops/gitops-iac-pipeline.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-iac-pipeline.yml.j2
@@ -127,44 +127,44 @@ spec:
       default: ''
 
     # iac-msk iot params
-    - name: iot_msk_kafka_version
+    - name: msk_iot_kafka_version
       type: string
       default: ''
 
-    - name: iot_msk_instance_type
+    - name: msk_iot_instance_type
       type: string
       default: ''
 
-    - name: iot_msk_cluster_username
+    - name: msk_iot_cluster_username
       type: string
       default: ''
 
-    - name: iot_broker_volume_size
+    - name: msk_iot_broker_volume_size
       type: string
       default: ''
 
-    - name: iot_number_of_broker_nodes
+    - name: msk_iot_number_of_broker_nodes
       type: string
       default: ''
 
     # iac-msk monitor params
-    - name: monitor_msk_kafka_version
+    - name: msk_monitor_kafka_version
       type: string
       default: ''
 
-    - name: monitor_msk_instance_type
+    - name: msk_monitor_instance_type
       type: string
       default: ''
 
-    - name: monitor_msk_cluster_username
+    - name: msk_monitor_cluster_username
       type: string
       default: ''
 
-    - name: monitor_broker_volume_size
+    - name: msk_monitor_broker_volume_size
       type: string
       default: ''
 
-    - name: monitor_number_of_broker_nodes
+    - name: msk_monitor_number_of_broker_nodes
       type: string
       default: ''
 
@@ -351,28 +351,28 @@ spec:
           value: $(params.msk_source)
 
         # iac-msk iot params
-        - name: iot_msk_kafka_version
-          value: $(params.iot_msk_kafka_version)
-        - name: iot_msk_instance_type
-          value: $(params.iot_msk_instance_type)
-        - name: iot_msk_cluster_username
-          value: $(params.iot_msk_cluster_username)
-        - name: iot_broker_volume_size
-          value: $(params.iot_broker_volume_size)
-        - name: iot_number_of_broker_nodes
-          value: $(params.iot_number_of_broker_nodes)
+        - name: msk_iot_kafka_version
+          value: $(params.msk_iot_kafka_version)
+        - name: msk_iot_instance_type
+          value: $(params.msk_iot_instance_type)
+        - name: msk_iot_cluster_username
+          value: $(params.msk_iot_cluster_username)
+        - name: msk_iot_broker_volume_size
+          value: $(params.msk_iot_broker_volume_size)
+        - name: msk_iot_number_of_broker_nodes
+          value: $(params.msk_iot_number_of_broker_nodes)
 
         # iac-msk monitor params
-        - name: monitor_msk_kafka_version
-          value: $(params.monitor_msk_kafka_version)
-        - name: monitor_msk_instance_type
-          value: $(params.monitor_msk_instance_type)
-        - name: monitor_msk_cluster_username
-          value: $(params.monitor_msk_cluster_username)
-        - name: monitor_broker_volume_size
-          value: $(params.monitor_broker_volume_size)
-        - name: monitor_number_of_broker_nodes
-          value: $(params.monitor_number_of_broker_nodes)
+        - name: msk_monitor_kafka_version
+          value: $(params.msk_monitor_kafka_version)
+        - name: msk_monitor_instance_type
+          value: $(params.msk_monitor_instance_type)
+        - name: msk_monitor_cluster_username
+          value: $(params.msk_monitor_cluster_username)
+        - name: msk_monitor_broker_volume_size
+          value: $(params.msk_monitor_broker_volume_size)
+        - name: msk_monitor_number_of_broker_nodes
+          value: $(params.msk_monitor_number_of_broker_nodes)
 
     # Task 4: Generate Common Files (Runs after EFS/S3/MSK tasks complete/skip)
     # -------------------------------------------------------------------------
@@ -457,28 +457,28 @@ spec:
           value: $(params.s3_mvi)
 
       # iac-msk iot params
-        - name: iot_msk_kafka_version
-          value: $(params.iot_msk_kafka_version)
-        - name: iot_msk_instance_type
-          value: $(params.iot_msk_instance_type)
-        - name: iot_msk_cluster_username
-          value: $(params.iot_msk_cluster_username)
-        - name: iot_broker_volume_size
-          value: $(params.iot_broker_volume_size)
-        - name: iot_number_of_broker_nodes
-          value: $(params.iot_number_of_broker_nodes)
+        - name: msk_iot_kafka_version
+          value: $(params.msk_iot_kafka_version)
+        - name: msk_iot_instance_type
+          value: $(params.msk_iot_instance_type)
+        - name: msk_iot_cluster_username
+          value: $(params.msk_iot_cluster_username)
+        - name: msk_iot_broker_volume_size
+          value: $(params.msk_iot_broker_volume_size)
+        - name: msk_iot_number_of_broker_nodes
+          value: $(params.msk_iot_number_of_broker_nodes)
 
       # iac-msk monitor params
-        - name: monitor_msk_kafka_version
-          value: $(params.monitor_msk_kafka_version)
-        - name: monitor_msk_instance_type
-          value: $(params.monitor_msk_instance_type)
-        - name: monitor_msk_cluster_username
-          value: $(params.monitor_msk_cluster_username)
-        - name: monitor_broker_volume_size
-          value: $(params.monitor_broker_volume_size)
-        - name: monitor_number_of_broker_nodes
-          value: $(params.monitor_number_of_broker_nodes)
+        - name: msk_monitor_kafka_version
+          value: $(params.msk_monitor_kafka_version)
+        - name: msk_monitor_instance_type
+          value: $(params.msk_monitor_instance_type)
+        - name: msk_monitor_cluster_username
+          value: $(params.msk_monitor_cluster_username)
+        - name: msk_monitor_broker_volume_size
+          value: $(params.msk_monitor_broker_volume_size)
+        - name: msk_monitor_number_of_broker_nodes
+          value: $(params.msk_monitor_number_of_broker_nodes)
 
     # Task 5: Manage PR (Always runs last)
     # -------------------------------------------------------------------------
