Msk pipeline and task changes

--- a/tekton/src/tasks/gitops/gitops-iac-provision-msk.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-iac-provision-msk.yml.j2
@@ -28,26 +28,26 @@ spec:
       type: string
 
    # iac-msk iot params
-    - name: MSK_IOT_kafka_version
+    - name: msk_iot_kafka_version
       type: string
-    - name: MSK_IOT_instance_type
+    - name: msk_iot_instance_type
       type: string
-    - name: MSK_IOT_cluster_username
+    - name: msk_iot_cluster_username
       type: string
-    - name: iot_broker_volume_size
+    - name: msk_iot_broker_volume_size
       type: string
-    - name: iot_number_of_broker_nodes
+    - name: msk_iot_number_of_broker_nodes
       type: string
    # iac-msk monitor params
-    - name: MSK_MONITOR_kafka_version
+    - name: msk_monitor_kafka_version
       type: string
-    - name: MSK_MONITOR_instance_type
+    - name: msk_monitor_instance_type
       type: string
-    - name: MSK_MONITOR_cluster_username
+    - name: msk_monitor_cluster_username
       type: string
-    - name: monitor_broker_volume_size
+    - name: msk_monitor_broker_volume_size
       type: string
-    - name: monitor_number_of_broker_nodes
+    - name: msk_monitor_number_of_broker_nodes
       type: string
 
 
